[package]
name = "elidex-api-crypto"
description = "Engine-independent WebCrypto algorithms for elidex (CryptoKey lifecycle, algorithm normalization, HMAC, digest, JWK)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
keywords = ["browser-engine", "webcrypto", "hmac"]
categories = ["web-programming", "cryptography"]

[dependencies]
aes.workspace = true
aes-kw.workspace = true
base64.workspace = true
cbc = { workspace = true, features = ["alloc"] }
ecdsa.workspace = true
elliptic-curve.workspace = true
ghash.workspace = true
hkdf.workspace = true
hmac.workspace = true
p256.workspace = true
p384.workspace = true
p521.workspace = true
pbkdf2.workspace = true
rand_core.workspace = true
rsa.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha1.workspace = true
sha1-oid.workspace = true
sha2.workspace = true
sha2-oid.workspace = true
subtle.workspace = true

[dev-dependencies]
# Seeded deterministic CSPRNG for the RSA `generateKey` tests (reproducible
# keys without an OS-entropy dependency in the test).
rand_chacha = "0.3"

[lints]
workspace = true
