[package]
name = "elidex-api-sw"
description = "Service Worker lifecycle, Cache API integration, and PWA support for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
keywords = ["browser-engine", "service-worker", "pwa"]
categories = ["web-programming"]

[dependencies]
crossbeam-channel.workspace = true
elidex-plugin.workspace = true
regex.workspace = true
elidex-storage-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
