[package]
name = "elidex-cache-api"
description = "Cache API storage backend for elidex (WHATWG Cache API)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
keywords = ["browser-engine", "cache-api", "service-worker"]
categories = ["web-programming"]

[dependencies]
elidex-storage-core.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
