[package]
name = "elidex-ecs"
description = "ECS-based DOM storage for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
readme = "README.md"
keywords = ["browser-engine", "ecs", "dom"]
categories = ["web-programming"]

[dependencies]
hecs.workspace = true
indexmap = "2"
elidex-plugin.workspace = true

[lints]
workspace = true
