[package]
name = "elidex-sandbox"
version.workspace = true
edition.workspace = true
description = "Platform-specific process sandbox enforcement for elidex"
publish = false

[dependencies]
elidex-plugin = { path = "../elidex-plugin" }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
