[package]
name = "elidex-css-anim"
description = "CSS Animations and Transitions property handler plugin for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
keywords = ["browser-engine", "css", "animation", "transition"]
categories = ["web-programming"]

[dependencies]
elidex-plugin.workspace = true
elidex-css.workspace = true
cssparser.workspace = true

[lints]
workspace = true
